Add PITest to all modules - project-model: 93%, project-app: 73%, project-repomem: 9%